--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npx gh-pages -d dist"
   },
   "devDependencies": {
     "@popperjs/core": "^2.11.6",
@@ -15,6 +16,7 @@
     "classnames": "^2.3.2",
     "flowbite": "^1.6.2",
     "flowbite-svelte": "^0.29.11",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
     "svelte": "^3.54.0",
