feat: add flowbite-svelte-admin-dashboard

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.2",
     "flowbite": "^1.6.2",
     "flowbite-svelte": "^0.29.11",
+    "flowbite-svelte-admin-dashboard": "^0.0.3",
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
